# cddio

./: .gitignore  Cargo.toml  README.md  cdd.json  config-template.py  config.json  config_sample.json  config_sample.ron  config_sample.yaml  crates.js  help.html  main.py  search-index.js  settings.html  src-files.js  test.txt
.cargo/: config
.github/ISSUE_TEMPLATE/: demande-de-feature-.md  signalez-un-bug.md
.github/workflows/: build.yml  rust.yml  rustdoc.yml
cddio/: all.html  fn.main.html  index.html  macro.log_error.html  macro.log_info.html  macro.log_warn.html  sidebar-items.js  trait.ResultLog.html
cddio/bot/: index.html  sidebar-items.js  struct.Bot.html  type.Result.html
cddio/components/: index.html  sidebar-items.js
cddio/components/autobahn/: index.html  sidebar-items.js  struct.Autobahn.html  struct.MessageInfo.html  type.MessageHash.html
cddio/components/dalle_mini/: constant.DALLE_MINI_MAX_COUNT.html  index.html  sidebar-items.js  struct.DALLE_MINI_COUNTER.html  struct.DalleMini.html  struct.DalleRequest.html  struct.DalleResponse.html
cddio/components/help/: index.html  sidebar-items.js  struct.Help.html
cddio/components/misc/: index.html  sidebar-items.js  struct.Misc.html
cddio/components/modo/: constant.AUDIT_TIME_THRESHOLD.html  index.html  sidebar-items.js  (+1 more)
cddio/config/: enum.Mentionable.html  index.html  sidebar-items.js  struct.Autobahn.html  struct.Bot.html  struct.Config.html  struct.Tickets.html
cddio/db/: fn.check_tables.html  fn.start_db.html  index.html  macro.create_tables_if_not_exists!.html  macro.create_tables_if_not_exists.html  sidebar-items.js  type.IDType.html
cddio/log/: fn.init.html  index.html  sidebar-items.js  static.LOGGER.html  struct.SimpleLogger.html
cddio_core/: all.html  index.html  sidebar-items.js  trait.Component.html  type.Components.html
cddio_core/container/: index.html  sidebar-items.js  struct.ComponentContainer.html  type.RefContainer.html
cddio_core/declarative/: enum.IterType.html  index.html  sidebar-items.js  struct.Argument.html  struct.ChildNode.html  struct.Command.html  struct.IterFlatNode.html  struct.Node.html  trait.ComponentDeclarative.html
cddio_core/embed/: enum.Mentionable.html  index.html  sidebar-items.js  struct.ApplicationCommandEmbed.html  struct.DelayedResponse.html
cddio_core/event/: index.html  sidebar-items.js  struct.ComponentEventDispatcher.html  trait.ComponentEvent.html  trait.RawEventHandler.html
cddio_core/message/: constant.COLOR_ERROR.html  constant.COLOR_INFO.html  constant.COLOR_SUCCESS.html  constant.COLOR_WARN.html  fn.custom_embed.html  fn.error.html  fn.info.html  fn.success.html  fn.warn.html  index.html  sidebar-items.js  struct.Embed.html  struct.Message.html  trait.ToMessage.html
cddio_macros/: all.html  attr.component.html  index.html  sidebar-items.js
implementors/cddio_core/: trait.Component.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/log/: trait.Log.js
implementors/strum/: trait.IntoEnumIterator.js
src/: bot.rs  cogs_management.py  config.py  config.rs  log.rs  main.py  main.rs  tests.rs  util.rs
src/cddio/: bot.rs.html  config.rs.html  log.rs.html  main.rs.html
src/cddio_core/: container.rs.html  declarative.rs.html  embed.rs.html  event.rs.html  lib.rs.html  message.rs.html
src/cddio_macros/: function.rs.html  group.rs.html  lib.rs.html  log.rs.html  util.rs.html
src/commands/: mod.rs  test.rs
src/component/: bot_start.rs  command_parser.rs  data.rs  event.rs  framework.rs  manager.rs  mod.rs  slash.rs
src/component_system/: README.md  command_parser.rs  event.rs  framework.rs  manager.rs  mod.rs  slash.rs
src/components/: README.md  mod.rs
src/db/: mod.rs
src/event/: bot_start.rs  mod.rs  sub_event_handler.rs
src/middleware/: bot_start.rs  framework.rs  mod.rs
(+338 files in other folders)
