[package]
name = "open_cdd"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
licence-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
serde = { version = "1.0", features = ["rc"] }
async-std = { version = "1.11", features = ["tokio1"] }
log = "0.4.17"
futures = "0.3"
futures-locks = "0.6"
chrono = "0.4"
ron = "0.7"
lazy_static = "1.4"
regex = "1.5"
hashers = "1.0"
serde_with = { version = "1", features = ["chrono"] }
# sea-orm = "0.8.0"
opencdd-macros = { path = "deps/opencdd-macros" }
opencdd-components = { path = "deps/opencdd-components" }

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["unstable_discord_api", "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]

[features]
verbose = [ "opencdd-macros/verbose" ]

[target.stable-aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]