[package]
name = "cddio"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
licence-file = "LICENSE"

[workspace]
members = ["deps/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["rc"] }
async-std = { version = "1.11", features = ["tokio1"] }
log = "0.4.17"
futures = "0.3"
futures-locks = "0.7.1"
chrono = "0.4"
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.5"
hashers = "1.0"
serde_with = { version = "3", features = ["chrono"] }
cddio-macros = { path = "deps/cddio-macros" }
cddio-core = { path = "deps/cddio-core" }
image = "0.24"
reqwest = "0.11"
base64 = "^0.21.2"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["unstable_discord_api", "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]

[features]
verbose = ["cddio-macros/verbose"]
show_markdown = []

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[target.stable-aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
